# backend/docs/swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/auth/login": {
             "post": {
-                "description": "Принимает логин и пароль и возвращает true/false",
+                "description": "Принимает логин и пароль и возвращает JWT токен",
                 "consumes": [
                     "application/json"
                 ],
@@ -33,11 +33,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/dto.AuthTokenDto"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -841,6 +850,14 @@
         }
     },
     "definitions": {
+        "dto.AuthTokenDto": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreateGameDto": {
             "type": "object",
             "required": [
